--- a/assests/css/Accusantium voluptatem.css
+++ b/assests/css/Accusantium voluptatem.css
@@ -58,6 +58,14 @@ body{
     font-size: 8px;
     margin-left: 2px;
 }
+.rightCon a{
+    color: #999;
+    text-decoration: none;
+}
+.rightCon a:hover{
+    color: #ebb5ac;
+    transition: 0.3s all;
+}
 .firstNav{
     width: 90%;
     height:90px;
@@ -68,7 +76,11 @@ body{
     margin-left: auto;
     margin-right: auto;
 }
-.inDivision1{
+.inDivision a{
+    color: #000000;
+    text-decoration: none;
+} 
+.inDivision{
     width: 50%;
     height: 100%;
     display: flex;
@@ -116,13 +128,22 @@ body{
     justify-content: space-between;
     background-color: white;
     position: absolute;
-    top:53px;
+    top:92px;
     z-index: 10;
 }
 .dropDown{
+    height: 100%;
     position: relative; 
-    display: flex;   
+    display: flex; 
+    align-items: center;  
 }
+.dropDown p{
+    font-size: 13px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
 
 .dropDown:hover .details{
     display: flex;
@@ -130,7 +151,6 @@ body{
 
 .dropCont{
     width: 92%;
-    /* height: 23%; */
     display: flex;
     align-items: center;
     justify-content:space-between;
@@ -208,8 +228,16 @@ body{
     display: flex;
 }
 .item{
+    height: 100%;
     display: flex;
     position: relative;
+    align-items: center;
+   
+}
+.item p{
+    height: 100%;
+    display: flex;
+    align-items: center;
    
 }
 .item1{
@@ -221,7 +249,7 @@ body{
     justify-content:space-evenly;
     flex-direction: column;
     position:absolute;
-    top:53px;
+    top:90px;
     left: -20px;
     padding-left: 18px;
     border: 1px solid lightgray;
@@ -231,6 +259,9 @@ body{
     color:#777777;
     letter-spacing: 0.5px;
     line-height:5px;
+}
+.item1 a{
+    text-decoration: none;
 }
 
 
@@ -260,7 +291,7 @@ body{
     background-color: #f5f5f5;
     height: 70px;
  }
-.secondNav{
+ .secondNav{
     width: 90%;
     margin-left: auto;
     margin-right: auto;
@@ -270,37 +301,42 @@ body{
     justify-content: flex-start;
 } 
 .secondNav  p{
-    width: 65px;
-    height: 18%;
+    width:100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    margin-left: 10px;
     font-size: 13px;
     font-weight: 400;
-    border-right: 1px solid #000000;
-    letter-spacing: 0.3px;
+     letter-spacing: 0.3px;
 }
 .secondNav a{
     color: #000000;
     font-weight: 400;
-    width: 50px;
-    height: 18%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: flex-start;
     font-size: 13px;
-    border-right: 1px solid #000000;
     text-decoration: none;
     letter-spacing: 0.3px;
+}
+.secondNav a:hover{
+    color: #ebb5ac;
 }
 .secondNav h6{
     color: #000000;
     font-weight: 400;
     font-size: 13px;
-    letter-spacing: 0.3px;
+    letter-spacing: 0.3px; 
+    padding-left: 10px;
+    border-left: 1px solid #000000;
     margin-left: 10px;
 }
+.secondNav h6:hover{
+    color: #ebb5ac;
+}
+
 .whole{
         width: 100%;
         height: 100%;
@@ -355,6 +391,23 @@ body{
 .inImg img{
     width: 444px;
     height: 570px;
+}
+.arrows i{
+    width:43px;
+    height: 40px;
+    position: absolute;
+    top: 520px;
+    right: 27px;
+    background-color: #ebb5ac;
+    color: white;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+.arrows{
+    position: relative;
 }
 .rightItem{
     width:50%;
@@ -557,7 +610,7 @@ body{
 }
 
 
-.inDivision{
+.inDiv{
     width: 100%;
     height: 60px;
     display: flex;
@@ -733,10 +786,28 @@ body{
     text-align: center;
     border:1px solid #ce1f21;
     padding: 10px;
-    /* color:white;
-    border-radius: 20px #ce1f21; */
+    color:#ce1f21;
     font-size: 17px;
 }
+.i11:hover{
+    background-color:#435F9F;
+    color: white;
+}
+.i12:hover{
+    
+    background-color:#00aaf0;
+    color: white;
+}
+.i13:hover{
+    background-color:#e04b34;
+    color: white;
+}
+.i14:hover{
+    background-color: #ce1f21;
+    color: white;
+}
+
+
 .policies{
     width: 99%;
     height: 50px;
@@ -1325,7 +1396,7 @@ body{
 .topNav{
     display: none;
 }
-.inDivision1{
+.inDivision{
     display: none;
 }
 .imgIcons{
@@ -1441,6 +1512,12 @@ body{
 }
 .others h1{
     font-size: 20px;
+}
+.reviews{
+    height: 60px;
+}
+.likes{
+    margin-top: 40px;
 }
 .footer{
     height: 100%;
