--- a/assests/css/Forgot password.css
+++ b/assests/css/Forgot password.css
@@ -27,6 +27,10 @@ body{
 .menu{
     display: none;
 }
+.inDivision a{
+    color: #000000;
+    text-decoration: none;
+} 
 .inDivision{
     width: 50%;
     height: 100%;
@@ -37,6 +41,14 @@ body{
 }
 .dropDown p{
     font-size: 13px;
+}
+.rightCon i{
+    font-size: 8px;
+    margin-left: 2px;
+}
+.rightCon a{
+    color: #999;
+    text-decoration: none;
 }
 
 .firstNav p{
@@ -72,12 +84,20 @@ body{
     justify-content: space-between;
     background-color: white;
     position: absolute;
-    top:53px;
+    top:92px;
     z-index: 10;
 }
 .dropDown{
+    height: 100%;
     position: relative; 
-    display: flex;   
+    display: flex; 
+    align-items: center;  
+}
+.dropDown p{
+    font-size: 13px;
+    height: 100%;
+    display: flex;
+    align-items: center;
 }
 
 .dropDown:hover .details{
@@ -86,7 +106,6 @@ body{
 
 .dropCont{
     width: 92%;
-    /* height: 23%; */
     display: flex;
     align-items: center;
     justify-content:space-between;
@@ -163,11 +182,7 @@ body{
  .item:hover .item1{
     display: flex;
 }
-.item{
-    display: flex;
-    position: relative;
-   
-}
+
 .item1{
     width: 155px;
     height: 115px;
@@ -177,10 +192,23 @@ body{
     justify-content:space-evenly;
     flex-direction: column;
     position:absolute;
-    top:53px;
+    top:90px;
     left: -20px;
     padding-left: 18px;
     border: 1px solid lightgray;
+}
+.item{
+    height: 100%;
+    display: flex;
+    position: relative;
+    align-items: center;
+   
+}
+.item p{
+    height: 100%;
+    display: flex;
+    align-items: center;
+   
 }
 .item1 p{
     font-size: 13px;
@@ -560,6 +588,10 @@ button{
     }
     .menu{
         display: block;
+    }
+    .rightSide h6{
+        margin-top: 15px;
+        margin-bottom: 15px;
     }
     .footer{
         height: 100%;
