--- a/assests/css/dresses.css
+++ b/assests/css/dresses.css
@@ -58,6 +58,14 @@ body{
     font-size: 8px;
     margin-left: 2px;
 }
+.rightCon a{
+    color: #999;
+    text-decoration: none;
+}
+.rightCon a:hover{
+    color: #ebb5ac;
+    transition: 0.3s all;
+}
 .firstNav{
     width: 90%;
     height:90px;
@@ -68,6 +76,10 @@ body{
     margin-left: auto;
     margin-right: auto;
 }
+.inDivision a{
+    color: #000000;
+    text-decoration: none;
+}  
 
 .inDivision{
     width: 50%;
@@ -114,13 +126,22 @@ body{
     justify-content: space-between;
     background-color: white;
     position: absolute;
-    top:53px;
+    top:92px;
     z-index: 10;
 }
 .dropDown{
+    height: 100%;
     position: relative; 
-    display: flex;   
+    display: flex; 
+    align-items: center;  
 }
+.dropDown p{
+    font-size: 13px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
 
 .dropDown:hover .details{
     display: flex;
@@ -128,7 +149,6 @@ body{
 
 .dropCont{
     width: 92%;
-    /* height: 23%; */
     display: flex;
     align-items: center;
     justify-content:space-between;
@@ -205,9 +225,20 @@ body{
  .item:hover .item1{
     display: flex;
 }
+.item1 a{
+    text-decoration: none;
+}
 .item{
+    height: 100%;
     display: flex;
     position: relative;
+    align-items: center;
+   
+}
+.item p{
+    height: 100%;
+    display: flex;
+    align-items: center;
    
 }
 .item1{
@@ -219,7 +250,7 @@ body{
     justify-content:space-evenly;
     flex-direction: column;
     position:absolute;
-    top:53px;
+    top:90px;
     left: -20px;
     padding-left: 18px;
     border: 1px solid lightgray;
@@ -230,6 +261,7 @@ body{
     letter-spacing: 0.5px;
     line-height:5px;
 }
+
 
 
  .num{
@@ -267,37 +299,44 @@ body{
     justify-content: flex-start;
 } 
 .secondNav  p{
-    width: 65px;
-    height: 18%;
+    width:100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    margin-left: 10px;
     font-size: 13px;
     font-weight: 400;
-    border-right: 1px solid #000000;
-    letter-spacing: 0.3px;
+     letter-spacing: 0.3px;
 }
 .secondNav a{
     color: #000000;
     font-weight: 400;
-    width: 50px;
-    height: 18%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: flex-start;
     font-size: 13px;
-    border-right: 1px solid #000000;
     text-decoration: none;
     letter-spacing: 0.3px;
+}
+.secondNav a:hover{
+    color: #ebb5ac;
 }
 .secondNav h6{
     color: #000000;
     font-weight: 400;
     font-size: 13px;
-    letter-spacing: 0.3px;
+    letter-spacing: 0.3px; 
+    padding-left: 10px;
+    border-left: 1px solid #000000;
     margin-left: 10px;
 }
+
+.secondNav h6:hover{
+    color: #ebb5ac;
+}
+
+
 .centerImg{
    width: 100%;
      height: 230px;
@@ -719,6 +758,60 @@ body{
     color: white;
     transition: 0.3s all;
 }
+.middle{
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
+}
+.mid{
+    width: 22%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content:space-around;
+}
+.mid p{
+    font-size: 14px;
+    color: #888888;
+}
+.mid1{
+    width: 10%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-right: 30px;
+
+}
+.mid1 h5{
+    width: 36px;
+    height: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #ebb5ac;
+    color: #000000;
+}
+.mid1 h6{
+    width: 36px;
+    height: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #000000;
+    color:white;
+    font-size: 13px;
+}
+.mid1 h6:hover{
+    background-color: #ebb5ac;
+    color: black;
+    transition: 0.3s all;
+}
+
 .footer {
     width: 100%;
     height: 340px; 
@@ -1033,6 +1126,19 @@ button{
     width: 70%;
     grid-template-columns: repeat(1,1fr);
 }
+.mid{
+    width: 50%;
+}
+.mid1{
+    width: 35%;
+    margin-right: 0px;
+}
+
+.middle{
+    height: 100%;
+    margin-bottom: 15px;
+}
+
 .footer{
     height: 100%;
     margin-top: 0px;
