--- a/assests/css/login.css
+++ b/assests/css/login.css
@@ -31,6 +31,10 @@ body{
 .menu{
     display: none;
 }
+.inDivision a{
+    color: #000000;
+    text-decoration: none;
+} 
 .inDivision{
     width: 50%;
     height: 100%;
@@ -54,6 +58,19 @@ body{
     color: #ebb5ac;
     transition: 0.5s all;
 }
+.rightCon i{
+    font-size: 8px;
+    margin-left: 2px;
+}
+.rightCon a{
+    color: #999;
+    text-decoration: none;
+}
+.rightCon a:hover{
+    color: #ebb5ac;
+    transition: 0.3s all;
+}
+
 
 .imgIcons{
     width: 11%;
@@ -76,13 +93,22 @@ body{
     justify-content: space-between;
     background-color: white;
     position: absolute;
-    top:53px;
+    top:90px;
     z-index: 10;
 }
 .dropDown{
+    height: 100%;
     position: relative; 
-    display: flex;   
+    display: flex; 
+    align-items: center;  
 }
+.dropDown p{
+    font-size: 13px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
 
 .dropDown:hover .details{
     display: flex;
@@ -90,7 +116,6 @@ body{
 
 .dropCont{
     width: 92%;
-    /* height: 23%; */
     display: flex;
     align-items: center;
     justify-content:space-between;
@@ -167,11 +192,7 @@ body{
  .item:hover .item1{
     display: flex;
 }
-.item{
-    display: flex;
-    position: relative;
-   
-}
+
 .item1{
     width: 155px;
     height: 115px;
@@ -181,7 +202,7 @@ body{
     justify-content:space-evenly;
     flex-direction: column;
     position:absolute;
-    top:53px;
+    top:90px;
     left: -20px;
     padding-left: 18px;
     border: 1px solid lightgray;
@@ -191,6 +212,19 @@ body{
     color:#777777;
     letter-spacing: 0.5px;
     line-height:5px;
+}
+.item{
+    height: 100%;
+    display: flex;
+    position: relative;
+    align-items: center;
+   
+}
+.item p{
+    height: 100%;
+    display: flex;
+    align-items: center;
+   
 }
  .num{
      position: relative;
